adjust styles and refine types

--- a/packages/components/src/FileCard/FileCard.mdx
+++ b/packages/components/src/FileCard/FileCard.mdx
@@ -22,14 +22,14 @@ import { FileCard } from "@jobber/components/FileCard";
   <FileCard
     file={{
       id: "abc",
-      name: "myballisbigandroundIamrollingitowntheground.heic",
-      type: "audio/ogg",
+      name: "myballisbigandroundIamrollingitowntheground.png",
+      type: "image/png",
       size: 213402324,
       progress: 0.3,
-      src:
-        "https://res-1.cloudinary.com/crunchbase-production/image/upload/c_thumb,h_256,w_256,f_auto,g_faces,z_0.7,q_auto:eco/ywedismk5vf5uqc2nngg",
-      thumbnailSrc:
-        "https://res-1.cloudinary.com/crunchbase-production/image/upload/c_thumb,h_256,w_256,f_auto,g_faces,z_0.7,q_auto:eco/ywedismk5vf5uqc2nngg"
+      src: () =>
+        Promise.resolve(
+          "https://res-1.cloudinary.com/crunchbase-production/image/upload/c_thumb,h_256,w_256,f_auto,g_faces,z_0.7,q_auto:eco/ywedismk5vf5uqc2nngg"
+        )
     }}
     onDelete={() => alert("🧨BALEETED!💥")}
   />
