Upload file test

--- a/packages/components/src/InputFile/InputFile.mdx
+++ b/packages/components/src/InputFile/InputFile.mdx
@@ -23,7 +23,7 @@ dropping them into an area on the page or by clicking a button.
 import { InputFile, updateFiles } from "@jobber/components/InputFile";
 ```
 
-export function fetchUploadParams(file) {
+export function fetchUploadParams() {
   return Promise.resolve({ url: "https://httpbin.org/post" });
 }
 
