tweak CSS and adjust button props

--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -120,9 +120,9 @@ signficant data, such as a job, quote, or client. This destructive action should
 be contained in a confirmation dialog triggered by clicking a Secondary
 destructive button.
 
-### Secondary
+### Secondary or Tertiary
 
-A Secondary destructive action will either...
+A Secondary or tertiary destructive action will either...
 
 - destroy an item on an object that can be quickly restored, such as a line item
   on a job
