--- a/packages/components/src/FormatFile/FormatFile.mdx
+++ b/packages/components/src/FormatFile/FormatFile.mdx
@@ -7,68 +7,54 @@ route: /components/format-file
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { FormatFile } from ".";
+import { Content } from "../Content/";
 
 # File Card
 
 <ComponentStatus stage="pre" responsive="no" accessible="no" />
 
 Pass this a logical description of a file (an object) and it will represent a
-file in a number of lifecycle states. A progress indicator can be used to
-display upload status, and a A delete callback function is availble to hook up
-to the delete button.
+file in a number of lifecycle states.
+
+A progress indicator can be used to display upload status, and a thumbnail or
+icon will be displayed depending on what is provided.
+
+A delete callback function can be passed in, and will be called when the user
+actions the delete button.
 
 ```ts
 import { FormatFile } from "@jobber/components/FormatFile";
 ```
 
 <Playground>
-  <FormatFile
-    file={{
-      key: "abc",
-      name: "myballisbigandroundIamrollingitontheground.png",
-      type: "image/png",
-      size: 213402324,
-      progress: 0.3,
-      src: () =>
-        Promise.resolve(
-          "https://res-1.cloudinary.com/crunchbase-production/image/upload/c_thumb,h_256,w_256,f_auto,g_faces,z_0.7,q_auto:eco/ywedismk5vf5uqc2nngg"
-        )
-    }}
-    onDelete={() => alert("🧨BALEETED!💥")}
-  />
-  <FormatFile
-    file={{
-      key: "mosdef",
-      name: "tps_report.png",
-      type: "application/pdf",
-      size: 2134023,
-      progress: 1
-    }}
-    onDelete={() => alert("🧨BALEETED!💥")}
-  />
+  <Content>
+    <FormatFile
+      file={{
+        key: "abc",
+        name: "myballisbigandroundIamrollingitontheground.png",
+        type: "image/png",
+        size: 213402324,
+        progress: 0.3,
+        src: () =>
+          Promise.resolve(
+            "https://res-1.cloudinary.com/crunchbase-production/image/upload/c_thumb,h_256,w_256,f_auto,g_faces,z_0.7,q_auto:eco/ywedismk5vf5uqc2nngg"
+          )
+      }}
+      onDelete={() => alert("🧨BALEETED!💥")}
+    />
+    <FormatFile
+      file={{
+        key: "mosdef",
+        name: "tps_report.png",
+        type: "application/pdf",
+        size: 2134023,
+        progress: 1
+      }}
+      onDelete={() => alert("🧨BALEETED!💥")}
+    />
+  </Content>
 </Playground>
-
-<!--
-  It is not necessary to include Design & Usage Guidlelines. Use this section
-  to answer common questions and considerations about component usage.
--->
-
-## Design & Usage Guidelines
-
-When contributing to, or consuming the FormatFile component, consider the
-following:
-
-- When using the FormatFile component always consider the volume you would like
-  it to be displayed at.
-- The FormatFile component should never be used inside another component.
 
 ## Props
 
 <Props of={FormatFile} />
-
-<!--
-  It is not necessary to provide an example of each prop. Use usage examples to
-  highlight key features of a component or particular considerations.
-
-  See `Button.mdx` for a good example of this.
--->
