--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -163,21 +163,26 @@ An autocomplete can provide section headings to break up the options.
 <Playground>
   {() => {
     const options = [
-      { label: "Ships", options: [
-        { value: 1, label: "Sulaco" },
-        { value: 2, label: "Nostromo" },
-        { value: 3, label: "Serenity" },
-        { value: 4, label: "Sleeper Service" },
-        { value: 5, label: "Enterprise" },
-        { value: 6, label: "Enterprise-D" },
-      ]},
-
-      { label: "Planets", options: [
-        { value: 7, label: "Endor" },
-        { value: 8, label: "Vulcan" },
-        { value: 9, label: "Bespin" },
-        { value: 10, label: "Tatooine" },
-      ]},
+      {
+        label: "Ships",
+        options: [
+          { value: 1, label: "Sulaco" },
+          { value: 2, label: "Nostromo" },
+          { value: 3, label: "Serenity" },
+          { value: 4, label: "Sleeper Service" },
+          { value: 5, label: "Enterprise" },
+          { value: 6, label: "Enterprise-D" }
+        ]
+      },
+      {
+        label: "Planets",
+        options: [
+          { value: 7, label: "Endor" },
+          { value: 8, label: "Vulcan" },
+          { value: 9, label: "Bespin" },
+          { value: 10, label: "Tatooine" }
+        ]
+      },
       { value: 11, label: "Enterprise" },
       { value: 12, label: "Ariel" }
     ];
@@ -202,9 +207,7 @@ An autocomplete can provide section headings to break up the options.
         option.heading ? true : option.label.match(filterRegex)
       );
     }
-
-}}
-
+  }}
 </Playground>
 
 ## Autocomplete with section headings, description and extra details
