rename input size to size

--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -267,7 +267,7 @@ separators.
         initialOptions={options}
         onChange={setValue}
         getOptions={getOptions}
-        inputSize={"small"}
+        size={"small"}
         placeholder="Search for something"
       />
     );
