--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -68,7 +68,7 @@ import { Autocomplete } from "@jobber/components/Autocomplete";
   See `Button.mdx` for a good example of this.
 -->
 
-## Autocomplete with optional item descriptions and extra details
+## With Details
 
 You can add a description to an option, which will appear below the option's
 label. You can also add a detail to an option which shows on the option's the
@@ -116,48 +116,7 @@ bottom right. Both of these are optional per option.
   }}
 </Playground>
 
-## Autocomplete with option separators
-
-Separators which appear as a bottom border are applied when at least one option
-has a decription or details field.
-
-<Playground>
-  {() => {
-    const options = [
-      {
-        value: 1,
-        label: "Sulaco",
-        desription: "They mostly come at night, mostly."
-      },
-      { value: 2, label: "Nostromo", details: "LV-426" },
-      { value: 3, label: "Serenity" },
-      { value: 4, label: "Sleeper Service" },
-      { value: 5, label: "Enterprise" },
-      { value: 6, label: "Enterprise-D" }
-    ];
-    const [value, setValue] = useState();
-    return (
-      <Autocomplete
-        value={value}
-        initialOptions={options}
-        onChange={setValue}
-        getOptions={getOptions}
-        placeholder="Search for something"
-      />
-    );
-    function getOptions(text) {
-      if (text === "") {
-        return options;
-      }
-      const filterRegex = new RegExp(text, "i");
-      return options.filter(option =>
-        option.heading ? true : option.label.match(filterRegex)
-      );
-    }
-  }}
-</Playground>
-
-## Autocomplete with section headings
+## Section headings
 
 An autocomplete can provide section headings to break up the options.
 
@@ -219,7 +178,7 @@ An autocomplete can provide section headings to break up the options.
   }}
 </Playground>
 
-## Autocomplete with section headings, description and extra details
+## Kitchensink
 
 This autocomplete uses section headings, details, descriptions and option
 separators.
