add usage guidelines

--- a/packages/components/src/FormatFile/FormatFile.mdx
+++ b/packages/components/src/FormatFile/FormatFile.mdx
@@ -52,6 +52,11 @@ import { FormatFile } from "@jobber/components/FormatFile";
   </Content>
 </Playground>
 
+## Design and Usage Guidelines
+
+- FormatFile components should take up the full width of the parent container (1
+  or 2 files per row).
+
 ## Props
 
 <Props of={FormatFile} />
