--- a/packages/components/src/FormatFile/FormatFile.mdx
+++ b/packages/components/src/FormatFile/FormatFile.mdx
@@ -54,6 +54,9 @@ import { FormatFile } from "@jobber/components/FormatFile";
 
 ## Design and Usage Guidelines
 
+When contributing to, or consuming the `InputFile` component, consider the
+following:
+
 - FormatFile components should take up the full width of the parent container (1
   or 2 files per row).
 
