--- a/packages/components/src/FormatFile/FormatFile.mdx
+++ b/packages/components/src/FormatFile/FormatFile.mdx
@@ -9,7 +9,7 @@ import { ComponentStatus } from "@jobber/docx";
 import { FormatFile } from ".";
 import { Content } from "../Content/";
 
-# File Card
+# Format File
 
 <ComponentStatus stage="pre" responsive="no" accessible="no" />
 
