Fix a bug in toast

--- a/packages/components/src/Toast/Toast.mdx
+++ b/packages/components/src/Toast/Toast.mdx
@@ -68,7 +68,8 @@ appropriatly when using Toast.
           variation="learning"
           onClick={() =>
             showToast({
-              message: "Toast is just crispy bread"
+              message: "Toast is just crispy bread",
+              variation: "info"
             })
           }
         />
