Overview of topics

--- a/docs/guides/book-club-css.mdx
+++ b/docs/guides/book-club-css.mdx
@@ -7,6 +7,40 @@ route: /book-club-css
 
 ## Roadmap
 
-### Flexbox
+↳ Week 1: Overview
 
-↳ Overview
+- Reading: https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+- Discussion: Talk about flexbox learnings
+- Discussion: Are there
+
+↳ Week 2: Axis & Alignment
+
+- Reading:
+  https://codeburst.io/understanding-basic-concepts-of-css-flexbox-ffa657dc39c1
+- Game: https://mastery.games/flexboxzombies/ Level 1 - 4
+- Discussion: Learnings from article
+- Discussion: Review game
+
+↳ Week 3: Flex Items
+
+- Game: https://mastery.games/flexboxzombies/ Level 5 - 8
+- Discussion: Review game answers
+
+↳ Week 4: Flex Wrap
+
+- Game: https://mastery.games/flexboxzombies/ Level 9 - 12
+- Discussion: Review game answers
+
+↳ Week 5: CSS Grid Overview
+
+- Reading: https://css-tricks.com/snippets/css/complete-guide-grid/
+- Reading: https://css-tricks.com/simple-named-grid-areas/
+- Discussion: Review
+
+↳ Week 6: Fancy Selectors
+
+- Reading:
+  https://code.tutsplus.com/tutorials/the-30-css-selectors-you-must-memorize--net-16048
+- Discussion: Review
+
+↳ Week 7: CSS Custom Properties
