--- a/docs/guides/book-club-css.mdx
+++ b/docs/guides/book-club-css.mdx
@@ -44,3 +44,5 @@ route: /book-club-css
 - Discussion: Review
 
 ↳ Week 7: CSS Custom Properties
+
+↳ Week 8: Put it all together. Lets build something
