--- a/packages/components/src/Autocomplete/Autocomplete.mdx
+++ b/packages/components/src/Autocomplete/Autocomplete.mdx
@@ -336,3 +336,8 @@ using either promises or `await` in `getOptions`.
     }
   }}
 </Playground>
+
+## Related components
+* If you want to present a list of predefined options without text input, use a [Select](select)
+instead. 
+* If no suggests are required for the text input, use [InputText](input-text).
