Adds logo to sidebar

--- a/packages/docz/docs/jobber-docz-theme.mdx
+++ b/packages/docz/docs/jobber-docz-theme.mdx
@@ -27,14 +27,26 @@ module.exports = {
 
 Allows you to change the width of the sidebar.
 
-Adds a favicon to your docz theme.
-
 ```ts
 // doczrc.js
 module.exports = {
   ...,
   themeConfig: {
     sidebarWidth: 500,
+  }
+}
+```
+
+## Logo Image
+
+Allows you to add an image as a logo.
+
+```ts
+// doczrc.js
+module.exports = {
+  ...,
+  themeConfig: {
+    logo: 'path/to/your/logo',
   }
 }
 ```
