--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -23,210 +23,19 @@ import { InputText } from "@jobber/components/InputText";
 ```
 
 <Playground>
-  <InputText defaultValue="Rocinante" placeholder="Ship Name" />
+  <InputText
+    defaultValue="Rocinante"
+    placeholder="Ship Name"
+    name="foo"
+    valid={{
+      minLength: {
+        value: 5,
+        message: "Too Short"
+      }
+    }}
+  />
 </Playground>
 
 ## Props
 
 <Props of={InputText} />
-
----
-
-## Controlled
-
-Use this to allow users to provide short answers.
-
-<Playground>
-  {() => {
-    const [age, setAge] = useState("Veintisiete");
-    return (
-      <InputText
-        value={age}
-        onChange={setAge}
-        name="age"
-        placeholder="Age in words"
-      />
-    );
-  }}
-</Playground>
-
-## Multiline
-
-Use this to allow users to provide long answers. The default number of rows is
-three.
-
-<Playground>
-  <InputText
-    multiline={true}
-    placeholder="Describe your age"
-    name="describeAge"
-  />
-</Playground>
-
-## Multiline with Minimum and Maximum
-
-This is to allow flexibility in the displayed textarea size as the user types.
-The textarea will start at a specified minimum and grow to a specified maximum.
-
-<Playground>
-  <InputText
-    defaultValue="Rocinante"
-    multiline={true}
-    rows={{ min: 1, max: 4 }}
-  />
-</Playground>
-
-## Validation message
-
-You can add your own custom validation messages on a field. However, this
-shouldn't replace server-side validation.
-
-<Playground>
-  {() => {
-    const [age, setAge] = useState("");
-    return (
-      <InputText
-        value={age}
-        onChange={handleChange}
-        name="age"
-        placeholder="What's your age"
-        validations={[
-          {
-            shouldShow: age.length > 2 && age.length < 10 && isNaN(age),
-            message: "Now that's a word, keep going!",
-            status: "success"
-          },
-          {
-            shouldShow: age.length >= 10,
-            message: "You sure you're that old?",
-            status: "warn"
-          },
-          {
-            shouldShow: age.length > 0 && !isNaN(age),
-            message: "Type your age in words",
-            status: "error"
-          }
-        ]}
-      />
-    );
-    function handleChange(newAge) {
-      setAge(newAge);
-    }
-  }}
-</Playground>
-
-## States
-
-### Disabled
-
-<Playground>
-  <InputText
-    placeholder="Credit card"
-    value="**** **** **** 1234"
-    disabled={true}
-    name="creditCard"
-  />
-</Playground>
-
-### Read only
-
-<Playground>
-  <InputText
-    placeholder="Your referral code"
-    value="WXYZ100"
-    readonly={true}
-    name="referralCode"
-  />
-</Playground>
-
-### Invalid
-
-<Playground>
-  <InputText
-    placeholder="Email"
-    value="atlantis"
-    invalid={true}
-    name="emailAddress"
-  />
-</Playground>
-
-## Sizes
-
-### Small
-
-<Playground>
-  <InputText name="smallField" size="small" placeholder="Duration" />
-</Playground>
-
-### Large
-
-<Playground>
-  <InputText name="largeField" size="large" placeholder="Your username" />
-</Playground>
-
-## Inline
-
-<Playground>
-  <Text>
-    My name is
-    <InputText
-      name="durationInDays"
-      value="Jeff"
-      size="small"
-      inline={true}
-      maxLength={4}
-      align="center"
-    />
-  </Text>
-</Playground>
-
-## Insertion
-
-<Playground>
-  {() => {
-    const [text, setText] = useState("Just some words here.");
-    const textRef = React.createRef();
-    const handleTextChange = newValue => {
-      setText(newValue);
-    };
-    const insert = () => {
-      textRef.current.insert("🎉");
-    };
-    return (
-      <Content>
-        <InputText value={text} onChange={handleTextChange} ref={textRef} />
-        <pre>{text}</pre>
-        <Button label="Insert Emoji" onClick={insert} />
-      </Content>
-    );
-  }}
-</Playground>
-
-## Focus
-
-<Playground>
-  {() => {
-    const textARef = React.createRef();
-    const textBRef = React.createRef();
-    const focusA = () => {
-      textARef.current.focus();
-    };
-    const focusB = () => {
-      textBRef.current.focus();
-    };
-    return (
-      <Content>
-        <InputText value="Text input A" ref={textARef} />
-        <InputText value="Text input B" ref={textBRef} />
-        <Button label="Focus text input A" onClick={focusA} />
-        <br />
-        <Button label="Focus text input B" onClick={focusB} />
-      </Content>
-    );
-  }}
-</Playground>
-
-## Using onValidation
-
-If you need to capture the error message and render it outside of the component.
-Read the [InputValidation](/components/input-validation) documentation.
