--- a/docs/guides/book-club-css.mdx
+++ b/docs/guides/book-club-css.mdx
@@ -11,25 +11,24 @@ route: /book-club-css
 
 - Reading: https://css-tricks.com/snippets/css/a-guide-to-flexbox/
 - Discussion: Talk about flexbox learnings
-- Discussion: Are there
 
 ↳ Week 2: Axis & Alignment
 
 - Reading:
   https://codeburst.io/understanding-basic-concepts-of-css-flexbox-ffa657dc39c1
-- Game: https://mastery.games/flexboxzombies/ Level 1 - 4
+- Game: https://mastery.games/flexboxzombies/ Level 1 - 3
 - Discussion: Learnings from article
 - Discussion: Review game
 
 ↳ Week 3: Flex Items
 
-- Game: https://mastery.games/flexboxzombies/ Level 5 - 8
-- Discussion: Review game answers
+- Game: https://mastery.games/flexboxzombies/ Level 4 - 8
+- Discussion: Review learnings from the game
 
 ↳ Week 4: Flex Wrap
 
 - Game: https://mastery.games/flexboxzombies/ Level 9 - 12
-- Discussion: Review game answers
+- Discussion: Review learnings from the game
 
 ↳ Week 5: CSS Grid Overview
 
@@ -43,6 +42,8 @@ route: /book-club-css
   https://code.tutsplus.com/tutorials/the-30-css-selectors-you-must-memorize--net-16048
 - Discussion: Review
 
-↳ Week 7: CSS Custom Properties
+↳ Week 7: Pseudo Elements
 
-↳ Week 8: Put it all together. Lets build something
+↳ Week 8: CSS Custom Properties
+
+↳ Week 9: Put it all together. Lets build something
