Fix the validation on input password docs

--- a/packages/components/src/InputPassword/InputPassword.mdx
+++ b/packages/components/src/InputPassword/InputPassword.mdx
@@ -50,13 +50,17 @@ import { InputPassword } from "@jobber/components/InputPassword";
         value={value}
         onChange={setValue}
         placeholder="Password"
-        validations={[
-          {
-            shouldShow: value.length < 10,
-            message: "Passwords should be at least 10 characters.",
-            status: "error"
+        name="password"
+        validations={{
+          required: {
+            value: true,
+            message: "You need a password."
+          },
+          minLength: {
+            value: 10,
+            message: "Passwords should be at least 10 characters."
           }
-        ]}
+        }}
       />
     );
   }}
