Some easy PR fixes

--- a/packages/components/src/InputNumber/InputNumber.mdx
+++ b/packages/components/src/InputNumber/InputNumber.mdx
@@ -21,13 +21,7 @@ import { InputNumber } from "@jobber/components/InputNumber";
 ```
 
 <Playground>
-  <InputNumber
-    defaultValue={7}
-    max={11}
-    min={0}
-    placeholder="Volume"
-    name="volume"
-  />
+  <InputNumber defaultValue={7} max={11} min={0} placeholder="Volume" />
 </Playground>
 
 ## Design Usage & Guidelines
