--- a/packages/components/src/InputNumber/InputNumber.mdx
+++ b/packages/components/src/InputNumber/InputNumber.mdx
@@ -21,7 +21,7 @@ import { InputNumber } from "@jobber/components/InputNumber";
 ```
 
 <Playground>
-  <InputNumber defaultValue={7} max={11} min={0} placeholder="Volume" />
+  <InputNumber defaultValue={7} max={11} min={0} placeholder="Number" />
 </Playground>
 
 ## Design Usage & Guidelines
