Allow button component to submit forms

--- a/packages/components/src/Form/Form.mdx
+++ b/packages/components/src/Form/Form.mdx
@@ -36,6 +36,6 @@ import { Form } from "@jobber/components/Form";
         }
       }}
     />
-    <button type="submit">Submit Form</button>
+    <Button label="Submit Form" />
   </Form>
 </Playground>
