--- a/packages/components/src/Form/Form.mdx
+++ b/packages/components/src/Form/Form.mdx
@@ -8,7 +8,9 @@ import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { useRef, useState } from "react";
 import { Form } from ".";
+import { useFormState } from "@jobber/hooks";
 import { InputText } from "@jobber/components/InputText";
+import { Content } from "@jobber/components/Content";
 import { Button } from "@jobber/components/Button";
 
 # Form
@@ -23,26 +25,36 @@ import { Form } from "@jobber/components/Form";
 
 <Playground>
   {() => {
-    const formRef = useRef({ isDirty: false });
-    const [formState, setFormState] = useState();
+    const [{ isDirty, isValid }, setFormState] = useFormState();
     return (
       <Form onSubmit={() => alert("submitted")} onStateChange={setFormState}>
-        <InputText
-          placeholder="First Name"
-          name="firstName"
-          validations={{
-            required: {
-              value: true,
-              message: "Tell us your name"
-            },
-            minLength: {
-              value: 3,
-              message: "That name is too short"
-            }
-          }}
-        />
-        <Button label="Submit Form" />
-        Dirty: {JSON.stringify(formState.isDirty)}.
+        <Content>
+          <InputText
+            placeholder="First Name"
+            name="firstName"
+            validations={{
+              required: {
+                value: true,
+                message: "Tell us your name"
+              },
+              minLength: {
+                value: 3,
+                message: "Your name is to short."
+              }
+            }}
+          />
+          <InputText
+            placeholder="Last Name"
+            name="lastName"
+            validations={{
+              required: {
+                value: true,
+                message: "Tell us your last name."
+              }
+            }}
+          />
+          <Button label="Submit Form" disabled={!isDirty || !isValid} />
+        </Content>
       </Form>
     );
   }}
